--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -125,6 +125,6 @@
         </section>
     </div>
     <footer>
-        <p>Holberton School</p>
+        <p>Best School</p>
     </footer>
 </body></html> 
